Fixing bugs, final changes

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<div class="markerGreen"></div>
 		</div>	
 		<div class="startBox box">
-			<div class="title">Guess the cities</div>
-			<div class="boxText">Mark the maximum number of the cities in the world</div>
+			<div class="title">Mark the City</div>
+			<div class="boxText">Mark as much as possible cities in the world</div>
 			<button>Start</button>
 		</div>
 		<div class="infoBox box">
