--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		</div>	
 		<div class="startBox box">
 			<div class="title">Mark the City</div>
-			<div class="boxText">Mark as much as possible cities in the world</div>
+			<div class="boxText">Mark the given cities on the map. You have total of 20000 km error credits.</div>
 			<button>Start</button>
 		</div>
 		<div class="infoBox box">
@@ -52,10 +52,8 @@
 		<div class="finishBox box">
 			<div class="boxText">
 				Total cities: <span class="totalCities"></span>
-				<br/>
-				<div>Click Start to play again</div>
 			</div>	
-			<button>Start</button>			
+			<button>Try again</button>			
 		</div>
 	</body>
 </html>
